# cpp-matlab-interface

./: .gitignore  CMakeLists.txt  README.md  main  main.sh  mcc.sh
matlab/: ifft3c.m  mapVBVD.m  mrxg_pre.m  read_twix_hdr.m  redim.m  twix_map_obj.m
src/: libmrxg.cpp  libmrxg.exports  libmrxg.h  main  main.cpp  readme.txt
